--- a/vCards/vCards.csproj
+++ b/vCards/vCards.csproj
@@ -288,6 +288,12 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VCardsDbConnection\VCardsDbConnection.csproj">
+      <Project>{47551f78-f010-42ee-83ef-1a7d3ae05eb8}</Project>
+      <Name>VCardsDbConnection</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
